<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:elevation="100dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="9"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/fullNameuserinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/full_name"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userNameuserinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/user_id"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailuserinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/email_address"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genderuserinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/gender"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <ImageView
                    android:id="@+id/Edit"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/download" />

                <Button
                    android:id="@+id/userLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_rounded"
                    android:textSize="24sp"
                    android:layout_marginTop="130dp"
                    android:gravity="center"
                    >
                </Button>
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>